[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fuentes/static/RobotoSlab-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Encriptador.gd" type="Script" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Titulo" type="Label" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 545.108
margin_top = 16.6945
margin_right = -566.892
margin_bottom = -671.305
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ENCRIPTADOR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo2" type="Label" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 145.833
margin_top = 609.378
margin_right = -986.167
margin_bottom = -78.6215
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Clave Publica"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textoaencriptar" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.7411
margin_top = 88.4518
margin_right = -68.2589
margin_bottom = -410.548
rect_pivot_offset = Vector2( 234, 256.231 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textoencriptado" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.4892
margin_top = 353.227
margin_right = -67.5109
margin_bottom = -145.773
focus_mode = 2
custom_styles/normal = SubResource( 2 )
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 145.212
margin_top = 648.94
margin_right = -855.788
margin_bottom = -26.0591
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
margin_left = -8.68547
margin_top = -12.4606
margin_right = 1313.32
margin_bottom = 760.539
color = Color( 0.203922, 0.203922, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 84.0
margin_top = 322.0
margin_right = 245.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 627.395, 670.634 )
custom_fonts/font = SubResource( 4 )
text = "Texto encriptado "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boton Encriptar" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 899.562
margin_top = 618.632
margin_right = -72.4384
margin_bottom = -28.368
custom_fonts/font = SubResource( 5 )
text = "Encriptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volver" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 509.939
margin_top = 620.352
margin_right = -462.061
margin_bottom = -26.6477
custom_fonts/font = SubResource( 5 )
text = "Volver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 80.8421
margin_top = 55.684
margin_right = 241.842
margin_bottom = 81.684
rect_pivot_offset = Vector2( 627.395, 670.634 )
custom_fonts/font = SubResource( 4 )
text = "Texto a encriptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -44.0
margin_right = 147.5
margin_bottom = 44.0
window_title = "Error"

[node name="ButtonEN" type="Button" parent="."]
margin_left = 1067.25
margin_top = 316.163
margin_right = 1164.25
margin_bottom = 348.163
custom_fonts/font = SubResource( 6 )
text = "Reset"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Boton Encriptar" to="." method="_on_Boton_Encriptar_pressed"]
[connection signal="pressed" from="Volver" to="." method="_on_Volver_pressed"]
[connection signal="pressed" from="ButtonEN" to="." method="_on_ButtonEN_pressed"]
